more brood civic changes

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -777,41 +777,57 @@
 	concept_tec_ruler_job_steward_desc: "§L$job_steward_desc$§!\n\n$job_steward_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_specialist$§!\n$tec_loc_c_produces$:\n\n"
 
 	# Hive
-		concept_tec_ruler_job_tec_broodqueen_drone: "$job_tec_broodqueen_drone$"
-		concept_tec_ruler_job_tec_broodqueen_drone_alias: "$job_tec_broodqueen_drone$"
-		concept_tec_ruler_job_tec_broodqueen_drone_icon: "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone$"
-		concept_tec_ruler_job_tec_broodqueen_drone_plural: "$job_tec_broodqueen_drone_plural$"
-		concept_tec_ruler_job_tec_broodqueen_drone_plural_icon: "£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$"
-		concept_tec_ruler_job_tec_broodqueen_drone_desc: "§L$job_tec_broodqueen_drone_desc$§!\n\n$job_tec_broodqueen_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+		# Brood Growth - Eusociality
+		concept_tec_ruler_job_tec_brood_queen_drone: "$job_tec_brood_queen_drone$"
+		concept_tec_ruler_job_tec_brood_queen_drone_alias: "$job_tec_brood_queen_drone$"
+		concept_tec_ruler_job_tec_brood_queen_drone_icon: "£job_tec_brood_queen_drone£ $job_tec_brood_queen_drone$"
+		concept_tec_ruler_job_tec_brood_queen_drone_plural: "$job_tec_brood_queen_drone_plural$"
+		concept_tec_ruler_job_tec_brood_queen_drone_plural_icon: "£job_tec_brood_queen_drone£ $job_tec_brood_queen_drone_plural$"
+		concept_tec_ruler_job_tec_brood_queen_drone_desc: "§L$job_tec_brood_queen_drone_desc$§!\n\n$job_tec_brood_queen_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
 
-		concept_tec_ruler_job_tec_broodlord_drone: "$job_tec_broodlord_drone$"
-		concept_tec_ruler_job_tec_broodlord_drone_alias: "$job_tec_broodlord_drone$"
-		concept_tec_ruler_job_tec_broodlord_drone_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone$"
-		concept_tec_ruler_job_tec_broodlord_drone_plural: "$job_tec_broodlord_drone_plural$"
-		concept_tec_ruler_job_tec_broodlord_drone_plural_icon: "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$"
-		concept_tec_ruler_job_tec_broodlord_drone_desc: "§L$job_tec_broodlord_drone_desc$§!\n\n$job_tec_broodlord_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+		concept_tec_ruler_job_tec_brood_lord_drone: "$job_tec_brood_lord_drone$"
+		concept_tec_ruler_job_tec_brood_lord_drone_alias: "$job_tec_brood_lord_drone$"
+		concept_tec_ruler_job_tec_brood_lord_drone_icon: "£job_tec_brood_lord_drone£ $job_tec_brood_lord_drone$"
+		concept_tec_ruler_job_tec_brood_lord_drone_plural: "$job_tec_brood_lord_drone_plural$"
+		concept_tec_ruler_job_tec_brood_lord_drone_plural_icon: "£job_tec_brood_lord_drone£ $job_tec_brood_lord_drone_plural$"
+		concept_tec_ruler_job_tec_brood_lord_drone_desc: "§L$job_tec_brood_lord_drone_desc$§!\n\n$job_tec_brood_lord_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
 
-		concept_tec_ruler_job_tec_splicer_empress_drone: "$job_tec_splicer_empress_drone$"
-		concept_tec_ruler_job_tec_splicer_empress_drone_alias: "$job_tec_splicer_empress_drone$"
-		concept_tec_ruler_job_tec_splicer_empress_drone_icon: "£job_tec_splicer_empress_drone£ $job_tec_splicer_empress_drone$"
-		concept_tec_ruler_job_tec_splicer_empress_drone_plural: "$job_tec_splicer_empress_drone_plural$"
-		concept_tec_ruler_job_tec_splicer_empress_drone_plural_icon: "£job_tec_splicer_empress_drone£ $job_tec_splicer_empress_drone_plural$"
-		concept_tec_ruler_job_tec_splicer_empress_drone_desc: "§L$job_tec_splicer_empress_drone_desc$§!\n\n$job_tec_splicer_empress_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+		# Brood Growth - Splicer queens
+		concept_tec_ruler_job_tec_brood_splicer_empress_drone: "$job_tec_brood_splicer_empress_drone$"
+		concept_tec_ruler_job_tec_brood_splicer_empress_drone_alias: "$job_tec_brood_splicer_empress_drone$"
+		concept_tec_ruler_job_tec_brood_splicer_empress_drone_icon: "£job_tec_brood_splicer_empress_drone£ $job_tec_brood_splicer_empress_drone$"
+		concept_tec_ruler_job_tec_brood_splicer_empress_drone_plural: "$job_tec_brood_splicer_empress_drone_plural$"
+		concept_tec_ruler_job_tec_brood_splicer_empress_drone_plural_icon: "£job_tec_brood_splicer_empress_drone£ $job_tec_brood_splicer_empress_drone_plural$"
+		concept_tec_ruler_job_tec_brood_splicer_empress_drone_desc: "§L$job_tec_brood_splicer_empress_drone_desc$§!\n\n$job_tec_brood_splicer_empress_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
 
-		concept_tec_ruler_job_tec_splicer_queen_drone: "$job_tec_splicer_queen_drone$"
-		concept_tec_ruler_job_tec_splicer_queen_drone_alias: "$job_tec_splicer_queen_drone$"
-		concept_tec_ruler_job_tec_splicer_queen_drone_icon: "£job_tec_splicer_queen_drone£ $job_tec_splicer_queen_drone$"
-		concept_tec_ruler_job_tec_splicer_queen_drone_plural: "$job_tec_splicer_queen_drone_plural$"
-		concept_tec_ruler_job_tec_splicer_queen_drone_plural_icon: "£job_tec_splicer_queen_drone£ $job_tec_splicer_queen_drone_plural$"
-		concept_tec_ruler_job_tec_splicer_queen_drone_desc: "§L$job_tec_splicer_queen_drone_desc$§!\n\n$job_tec_splicer_queen_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+		concept_tec_ruler_job_tec_brood_splicer_queen_drone: "$job_tec_brood_splicer_queen_drone$"
+		concept_tec_ruler_job_tec_brood_splicer_queen_drone_alias: "$job_tec_brood_splicer_queen_drone$"
+		concept_tec_ruler_job_tec_brood_splicer_queen_drone_icon: "£job_tec_brood_splicer_queen_drone£ $job_tec_brood_splicer_queen_drone$"
+		concept_tec_ruler_job_tec_brood_splicer_queen_drone_plural: "$job_tec_brood_splicer_queen_drone_plural$"
+		concept_tec_ruler_job_tec_brood_splicer_queen_drone_plural_icon: "£job_tec_brood_splicer_queen_drone£ $job_tec_brood_splicer_queen_drone_plural$"
+		concept_tec_ruler_job_tec_brood_splicer_queen_drone_desc: "§L$job_tec_brood_splicer_queen_drone_desc$§!\n\n$job_tec_brood_splicer_queen_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
 
+		# Brood Control - Overminds
+		concept_tec_ruler_job_tec_brood_overmind_drone: "$job_tec_brood_overmind_drone$"
+		concept_tec_ruler_job_tec_brood_overmind_drone_alias: "$job_tec_brood_overmind_drone$"
+		concept_tec_ruler_job_tec_brood_overmind_drone_icon: "£job_tec_brood_overmind_drone£ $job_tec_brood_overmind_drone$"
+		concept_tec_ruler_job_tec_brood_overmind_drone_plural: "$job_tec_brood_overmind_drone_plural$"
+		concept_tec_ruler_job_tec_brood_overmind_drone_plural_icon: "£job_tec_brood_overmind_drone£ $job_tec_brood_overmind_drone_plural$"
+		concept_tec_ruler_job_tec_brood_overmind_drone_desc: "§L$job_tec_brood_overmind_drone_desc$§!\n\n$job_tec_brood_overmind_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
 
-		concept_tec_ruler_job_tec_overmind_drone: "$job_tec_overmind_drone$"
-		concept_tec_ruler_job_tec_overmind_drone_alias: "$job_tec_overmind_drone$"
-		concept_tec_ruler_job_tec_overmind_drone_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone$"
-		concept_tec_ruler_job_tec_overmind_drone_plural: "$job_tec_overmind_drone_plural$"
-		concept_tec_ruler_job_tec_overmind_drone_plural_icon: "£job_tec_overmind_drone£ $job_tec_overmind_drone_plural$"
-		concept_tec_ruler_job_tec_overmind_drone_desc: "§L$job_tec_overmind_drone_desc$§!\n\n$job_tec_overmind_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+		# Brood Control - Cerebrates
+		# todo_hive_civics
+
+		# Brood Evolution - Proteans
+
+		# Brood Evolution - Broodtwisters
+		concept_tec_ruler_job_tec_brood_twister_drone: "$job_tec_brood_twister_drone$"
+		concept_tec_ruler_job_tec_brood_twister_drone_alias: "$job_tec_brood_twister_drone$"
+		concept_tec_ruler_job_tec_brood_twister_drone_icon: "£job_tec_brood_twister_drone£ $job_tec_brood_twister_drone$"
+		concept_tec_ruler_job_tec_brood_twister_drone_plural: "$job_tec_brood_twister_drone_plural$"
+		concept_tec_ruler_job_tec_brood_twister_drone_plural_icon: "£job_tec_brood_twister_drone£ $job_tec_brood_twister_drone_plural$"
+		concept_tec_ruler_job_tec_brood_twister_drone_desc: "§L$job_tec_brood_twister_drone_desc$§!\n\n$job_tec_brood_twister_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$tec_loc_pop_cat_brood_drone$§!\n$tec_loc_c_produces$:\n\n"
+
 	# /
 	# Machine
 		concept_tec_ruler_job_tec_prime_performance_drone: "$job_tec_prime_performance_drone$"
