fix: exist checks for ALL every/random/any effects and triggers

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -2574,6 +2574,10 @@
 	leader_trait_tec_aiauth_negative_behaviour_inhibitor: "Negative Behavior Inhibitor"
 	leader_trait_tec_aiauth_negative_behaviour_inhibitor_desc: "The AI Node incorporates a system for suppressing undesirable traits, imposing a higher upkeep to effectively restrain negative behaviors. Through this mechanism, the AI Node actively mitigates and curbs detrimental tendencies, fostering a more harmonious and productive environment within the empire without compromising its ethical boundaries."
 
+	leader_trait_tec_aiauth_aberrant_code: "Aberrant Code"
+	leader_trait_tec_aiauth_aberrant_code_desc: "Interference, of a greater being, whispers in the code, whispers in the network, this AI Node continues its duty, yet... its decisions are peculiar..."
+	utopia.3331.desc_ainode:0 "Though the secrets imparted to our people by the Whisperers are great use, some of them are also quite aberrant. Dealing with the eldritch knowledge, caused §Y[leader_target.GetTitle] [leader_target.GetName]'s§! code to turn to erratic, their decisions causing strain on the processing capacity of our empire."
+
 	leader_trait_tec_aiauth_ritualistic_implants_cyborg: "Rudimentary Ritualistic Interface"
 	leader_trait_tec_aiauth_ritualistic_implants_cyborg_desc: "The AI Node provides interfaces for the faithful, allowing to directly commune with the divine AI to inspire all."
 	# /
