Brood civic adjustments and code changes - civic_tec_hive_eusocial > civic_tec_hive_brood_eusocial

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1977,7 +1977,7 @@ l_english:
 	job_tec_brood_queen_drone_plural:0 "Brood Queens"
 	job_tec_brood_queen_drone_desc:0 "Specially breed and unique autonomous drones whose main function is providing the Hive Mind with a healthy drone litter and control of those drones. Its great degree of specialization requires constant maintenance and nurture."
 	job_tec_brood_queen_drone_effect_desc:0 "£job_tec_brood_queen_drone£ $job_tec_brood_queen_drone_plural$ convert $tec_loc_basic_resources$ into §Y$tec_loc_organic_assembly$§! and produce §Y$tec_loc_unity$§!, based on the number of £job_tec_brood_lord_drone£ §YBroodlords§! present in the planet."
-	job_tec_brood_queen_drone_effect_desc_planet:0 "[root.tec_broodqueen_production]"
+	job_tec_brood_queen_drone_effect_desc_planet:0 "[root.tec_brood_queen_production]"
 	job_tec_brood_queen_drone_effect_desc_0:0 "$job_tec_brood_queen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G1§! monthly $tec_loc_organic_assembly$."
 	job_tec_brood_queen_drone_effect_desc_1:0 "$job_tec_brood_queen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G2§! monthly $tec_loc_organic_assembly$."
 	job_tec_brood_queen_drone_effect_desc_2:0 "$job_tec_brood_queen_drone_effect_desc$\nCurrently, the Broodqueen on this planet produces §G3§! monthly $tec_loc_organic_assembly$."
@@ -2182,6 +2182,9 @@ l_english:
 	pop_modifier_tec_broodtwisted_stage_2_desc:0 "$pop_modifier_tec_broodtwisted_stage_1_desc$"
 	pop_modifier_tec_broodtwisted_stage_3:0 "Broodtwisted Evolution"
 	pop_modifier_tec_broodtwisted_stage_3_desc:0 "$pop_modifier_tec_broodtwisted_stage_1_desc$"
+
+	TOAST_TEC_BROOD_TWIST_OUTCOME_TITLE: "Broodtwisted Injection"
+	TOAST_TEC_BROOD_TWIST_OUTCOME_DESC: "Enhanced Pops: $tec_brood_twisted_pops_good|G$\nIncompatible pops: $tec_brood_twisted_pops_good|R$"
  # /
  # ------------------------------------------------- Mutagenic
 	job_tec_swarmlord_drone:0 "Swarmlord Drone"
