--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -192,6 +192,11 @@
 	civic_tooltip_tec_cluster_block: "Does NOT have a £tec_civic_ruler£['concept_tec_cluster_civic']"
 	civic_tooltip_tec_directive_block: "Does NOT have a £tec_civic_ruler_add£['concept_tec_directive_civic']"
 	civic_tooltip_tec_brood_block: "Does NOT have a £tec_civic_ruler£['concept_tec_brood_capital_civic']"
+	civic_tooltip_tec_brood_growth_block: "Does NOT have a £tec_civic_ruler£['concept_tec_brood_capital_civic'] (Growth)"
+	civic_tooltip_tec_brood_control_block: "Does NOT have a £tec_civic_ruler£['concept_tec_brood_capital_civic'] (Control)"
+	civic_tooltip_tec_brood_evolution_block: "Does NOT have a £tec_civic_ruler£['concept_tec_brood_capital_civic'] (Evolution)"
+	civic_tooltip_tec_brood_protection_block: "Does NOT have a £tec_civic_ruler£['concept_tec_brood_capital_civic'] (Protection)"
+	civic_tooltip_tec_brood_special_block: "Does NOT have a £tec_civic_ruler£['concept_tec_brood_capital_civic'] (Special)"
 	civic_tooltip_tec_dystopian_block: "Does NOT have a ['concept_tec_dystopian_society_civic'] Civic"
 
 	# Exception
@@ -2285,10 +2290,10 @@
  # /
  # Evolved
 	# Growth
-	civic_tec_hive_eusocial:0 "§G£tec_civic_ruler£§!Eusociality"
-	civic_tec_hive_eusocial_noicon:0 "Eusociality"
-	civic_tec_hive_eusocial_desc:0 "['concept_tec_brood_capital_civic']\n\nWhile united under the same consciousness, this species has evolved and thrived thanks to the mutual collaboration of every member of the hive, with a strong cooperative brood care, overlapping generations within a colony of adults, and a division of labor into reproductive and non-reproductive groups, creating specialized castes that propers a unitary development and prosperous future for every member."
-	civic_tec_hive_eusocial_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_brood_queen_drone£ Brood Progenitors§!\n- £building£ Capital Buildings replace §Yall§! their §Y$tec_loc_unity$ Drone§! jobs with a single ['concept_tec_ruler_job_tec_brood_queen_drone_icon'] and various ['concept_tec_ruler_job_tec_brood_lord_drone_plural_icon'] increased by §Y$tec_loc_capital_tier$§! and §Y$tec_loc_planet_ascension_plural$§!.\n\n$tec_loc_c_unlocks_feature$ §H£mod_pop_growth_speed£ Mutual Structuring§!\n- Each §Y£job_tec_brood_lord_drone£ $job_tec_brood_lord_drone$§! increase the production and upkeep of the planet §Y£job_tec_brood_queen_drone£ $job_tec_brood_queen_drone$§!\nCreating an external source of £pop£ Pop Assembly will make £job_tec_brood_queen_drone£ $job_tec_brood_queen_drone_plural$ produce a small amount of £mod_pop_growth_speed£ Pop growth instead.\n\n$tec_loc_c_restriction$ §RForbids§! £building£ Spawning Pools.\n"
+	civic_tec_hive_brood_eusocial:0 "§G£tec_civic_ruler£§!Eusociality"
+	civic_tec_hive_brood_eusocial_noicon:0 "Eusociality"
+	civic_tec_hive_brood_eusocial_desc:0 "['concept_tec_brood_capital_civic']\n\nWhile united under the same consciousness, this species has evolved and thrived thanks to the mutual collaboration of every member of the hive, with a strong cooperative brood care, overlapping generations within a colony of adults, and a division of labor into reproductive and non-reproductive groups, creating specialized castes that propers a unitary development and prosperous future for every member."
+	civic_tec_hive_brood_eusocial_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_brood_queen_drone£ Brood Progenitors§!\n- £building£ Capital Buildings replace §Yall§! their §Y$tec_loc_unity$ Drone§! jobs with a single ['concept_tec_ruler_job_tec_brood_queen_drone_icon'] and various ['concept_tec_ruler_job_tec_brood_lord_drone_plural_icon'] increased by §Y$tec_loc_capital_tier$§! and §Y$tec_loc_planet_ascension_plural$§!.\n\n$tec_loc_c_unlocks_feature$ §H£mod_pop_growth_speed£ Mutual Structuring§!\n- Each §Y£job_tec_brood_lord_drone£ $job_tec_brood_lord_drone$§! increase the production and upkeep of the planet §Y£job_tec_brood_queen_drone£ $job_tec_brood_queen_drone$§!\nCreating an external source of £pop£ Pop Assembly will make £job_tec_brood_queen_drone£ $job_tec_brood_queen_drone_plural$ produce a small amount of £mod_pop_growth_speed£ Pop growth instead.\n\n$tec_loc_c_restriction$ §RForbids§! £building£ Spawning Pools.\n"
 
 	civic_tec_hive_brood_splicer_queens:0 "§G£tec_civic_ruler£§!Splicer Matriarchs"
 	civic_tec_hive_brood_splicer_queens_noicon:0 "Splicer Matriarchs"
@@ -2329,10 +2334,10 @@
 	civic_tec_hive_brood_proteans_tooltip:0 "TO DO"
 	# Adaptation to adversity - job changes based on the planet/designation/etc
 
-	civic_tec_hive_brood_mutagenic:0 "§G£tec_civic_ruler£§!Mutagenic Evolvers"
-	civic_tec_hive_brood_mutagenic_noicon:0 "Mutagenic Evolvers"
-	civic_tec_hive_brood_mutagenic_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
-	civic_tec_hive_brood_mutagenic_tooltip:0 "TODO CIVIC unlock mutation dens which provide Permutator drones, permutator drones give 1*capital level pops a bonus to a random pop that can stack +25-50-100% base output (mutenhanced-mutevolved-mutapex drone); bonus can be lethal to the pops based on species traits"
+	civic_tec_hive_brood_twisters:0 "§G£tec_civic_ruler£§!Mutagenic Evolvers"
+	civic_tec_hive_brood_twisters_noicon:0 "Mutagenic Evolvers"
+	civic_tec_hive_brood_twisters_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_twisters_tooltip:0 "TODO CIVIC unlock mutation dens which provide Permutator drones, permutator drones give 1*capital level pops a bonus to a random pop that can stack +25-50-100% base output (mutenhanced-mutevolved-mutapex drone); bonus can be lethal to the pops based on species traits"
 	# Allow Mutation Dens providing Mutalizers, Abathur-like playstyle adding bonuses/debuffs to pops as modifier (permanently, each x years evolves a pop)
 
 	# Aggro
