fix: more compat and init fixes

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1308,3 +1308,6 @@ tech_reverse_advanced_dome: " "
 
 add_research_options_voidborn:0 "Research options gained after upgrading a Habitat:\n£engineering_research£§Y$tech_habitat_3$§!"
 tec_add_research_options_voidborn_first_build:0 "Research options gained after making a Habitat:\n£engineering_research£§Y$tech_habitat_2$§!"
+
+
+tec_archaeoengineers_ascension_faculty: "['building:building_archaeostudies_faculty'] will provide additional §Y£job_archaeoengineers£ $job_archaeoengineers_plural$§! scaling with §Y$tec_loc_planet_ascension_plural$§!"
