brood civics pretest

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -2018,6 +2018,8 @@ l_english:
 	mod_job_tec_brood_splicer_empress_drone_add:0 "$job_tec_brood_splicer_empress_drone$ Jobs"
 	mod_job_tec_brood_splicer_empress_drone_per_pop:0 "§G+1§! $job_tec_brood_splicer_empress_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_brood_splicer_empress_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_brood_splicer_empress_drone_add£ per $VALUE$ £pop£"
+
+	mod_tec_brood_splicer_queens_output_mult:0 "$job_tec_brood_splicer_queen_drone$ Efficiency"
  # /
  # ------------------------------------------------- Overmind
 	job_tec_brood_overmind_drone:0 "Overmind Drone"
@@ -2035,15 +2037,26 @@ l_english:
 	mod_job_tec_cyberovermind_drone_add:0 "$job_tec_cyberovermind_drone$ Jobs"
 	mod_job_tec_cyberovermind_drone_per_pop:0 "§G+1§! $job_tec_cyberovermind_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_cyberovermind_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cyberovermind_drone_add£ per $VALUE$ £pop£"
+
+	mod_tec_brood_overmind_output_mult:0 "$job_tec_brood_overmind_drone$ Output"
+	mod_tec_brood_cyberovermind_output_mult:0 "$job_tec_cyberovermind_drone$ Output"
  # /
  # ------------------------------------------------- Cerebrates
-	job_tec_cerebrate_drone:0 "Cerebrate Drone"
-	job_tec_cerebrate_drone_plural:0 "Cerebrate Drones"
-	job_tec_cerebrate_drone_desc:0 "A."
-	job_tec_cerebrate_drone_effect_desc:0 "£job_tec_cerebrate_drone£ $job_tec_cerebrate_drone_plural$ .$todo_hive_civics$"
-	mod_job_tec_cerebrate_drone_add:0 "$job_tec_cerebrate_drone$ Jobs"
-	mod_job_tec_cerebrate_drone_per_pop:0 "§G+1§! $job_tec_cerebrate_drone$ Job per $VALUE$ Pops"
-	mod_job_tec_cerebrate_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cerebrate_drone_add£ per $VALUE$ £pop£"
+	job_tec_brood_cerebrate_drone:0 "Cerebrate Drone"
+	job_tec_brood_cerebrate_drone_plural:0 "Cerebrate Drones"
+	job_tec_brood_cerebrate_drone_desc:0 "A."
+	job_tec_brood_cerebrate_drone_effect_desc:0 "£job_tec_brood_cerebrate_drone£ $job_tec_brood_cerebrate_drone_plural$ .$todo_hive_civics$"
+	mod_job_tec_brood_cerebrate_drone_add:0 "$job_tec_brood_cerebrate_drone$ Jobs"
+	mod_job_tec_brood_cerebrate_drone_per_pop:0 "§G+1§! $job_tec_brood_cerebrate_drone$ Job per $VALUE$ Pops"
+	mod_job_tec_brood_cerebrate_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_brood_cerebrate_drone_add£ per $VALUE$ £pop£"
+
+	job_job_tec_brood_minor_cerebrate_drone:0 "Dendrital Drone"
+	job_job_tec_brood_minor_cerebrate_drone_plural:0 "Dendrital Drones"
+	job_job_tec_brood_minor_cerebrate_drone_desc:0 "A."
+	job_job_tec_brood_minor_cerebrate_drone_effect_desc:0 "£mod_job_tec_brood_cerebrate_drone_add£ $job_job_tec_brood_minor_cerebrate_drone_plural$ .$todo_hive_civics$"
+	mod_job_job_tec_brood_minor_cerebrate_drone_add:0 "$job_job_tec_brood_minor_cerebrate_drone$ Jobs"
+	mod_job_job_tec_brood_minor_cerebrate_drone_per_pop:0 "§G+1§! $job_job_tec_brood_minor_cerebrate_drone$ Job per $VALUE$ Pops"
+	mod_job_job_tec_brood_minor_cerebrate_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_brood_cerebrate_drone_add£ per $VALUE$ £pop£"
 
 	job_tec_cybercerebrate_drone:0 "Cerebrate Drone"
 	job_tec_cybercerebrate_drone_plural:0 "Cerebrate Drones"
@@ -2052,6 +2065,17 @@ l_english:
 	mod_job_tec_cybercerebrate_drone_add:0 "$job_tec_cybercerebrate_drone$ Jobs"
 	mod_job_tec_cybercerebrate_drone_per_pop:0 "§G+1§! $job_tec_cybercerebrate_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_cybercerebrate_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_cybercerebrate_drone_add£ per $VALUE$ £pop£"
+
+	job_job_tec_brood_minor_cybercerebrate_drone:0 "Dendrital Drone"
+	job_job_tec_brood_minor_cybercerebrate_drone_plural:0 "Dendrital Drones"
+	job_job_tec_brood_minor_cybercerebrate_drone_desc:0 "A."
+	job_job_tec_brood_minor_cybercerebrate_drone_effect_desc:0 "£mod_job_tec_brood_cerebrate_drone_add£ $job_job_tec_brood_minor_cybercerebrate_drone_plural$ .$todo_hive_civics$"
+	mod_job_job_tec_brood_minor_cybercerebrate_drone_add:0 "$job_job_tec_brood_minor_cybercerebrate_drone$ Jobs"
+	mod_job_job_tec_brood_minor_cybercerebrate_drone_per_pop:0 "§G+1§! $job_job_tec_brood_minor_cybercerebrate_drone$ Job per $VALUE$ Pops"
+	mod_job_job_tec_brood_minor_cybercerebrate_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_brood_cerebrate_drone_add£ per $VALUE$ £pop£"
+
+	mod_tec_brood_cerebrate_output_mult:0 "$job_tec_cerebrate_drone$ Output"
+	mod_tec_brood_cybercerebrate_output_mult:0 "$job_tec_cybercerebrate_drone$ Output"
  # /
  # ------------------------------------------------- Proteans
 	job_tec_brood_protean_drone:0 "Proteanic Brood"
