--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -723,6 +723,15 @@
 	#trait_tec_gene_malleable_desc:0 "§LThe genetic composition of this species is intelligently altered to suit a myriad #of characteristics and new code without risking mutations or excessive biological stress.§!"
 	#TRAIT_TEC_GENE_MALLEABLE_EFFECT:0 "Reduces the cost of §HStandard Traits§! by §G1§!, down to §Y0§!."
 
+	mod_tec_gene_improvement_mult:0 "['concept_tec_gene_improvement'] effect"
+
+	concept_tec_gene_improvement:0 "Gene-Therapy"
+	concept_tec_gene_improvement_icon:0 "$concept_tec_gene_improvement$"
+	concept_tec_gene_improvement_help_icon:0 "£trigger_tec_question£"
+	concept_tec_gene_improvement_desc:0 "$todo_ascension$"
+
+
+
 	trait_tec_virtuous:0 "Virtuous"
 	trait_tec_virtuous_desc:0 "§LThe absolute delicacy and minucious work of this species product is remarkable and undeniabily out of this reality, any other species should be envious of such innate talent and search of perfection.§!\n"
 	TRAIT_TEC_VIRTUOUS_EFFECT:0 "£alloys£ £consumer_goods£ Industrial resources from £job£ Jobs: §G+10%§!"
