--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -152,17 +152,13 @@
 # /
 # Civics/mechanics
  edict_tec_mortgage_edict:0 "£job_purge£ Eternal Shifts"
- edict_tec_mortgage_edict_desc:0 "Workers will work to pay their debts until they die, and after that they will continue working to pay. Each planet with a §YDread Encampment§Y will receive a bonus of §G30%§! Worker Output and §G20%§! $MOD_TRADE_VALnvUE_MULT$, but there is a chance of a worker pop §Rdeath§! every year."
+ edict_tec_mortgage_edict_desc:0 "Workers will work to pay their debts until they die, and after that they will continue working to pay. Each planet with a §YDread Encampment§Y will receive a bonus of §G30%§! Worker Output and §G20%§! $MOD_TRADE_VALUE_MULT$, but there is a chance of a worker pop §Rdeath§! every year."
 # /
-
-
-
 
  edict_social_engineering:0 "Social Engineering"
  edict_social_engineering_desc:1 "This $ethic_fanatic_authoritarian$ Edict mandates the use of subtle social instruments to reinforce our governing Ethics on the planet.\n\n"
  edict_privatization_campaign:1 "Grassroots Administration"
  edict_privatization_campaign_desc:1 "This $ethic_egalitarian$ and $ethic_competitive$ Edict encourages the individuals closest to the production effort to take increased responsibility.\n\n"
-
 
  edict_forced_industrialization:0 "Doctrine: Industrial Efficiency"
  edict_forced_industrialization_desc:0 " "
