--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2292,12 +2292,12 @@
 	# Growth
 	civic_tec_hive_brood_eusocial:0 "§G£tec_civic_ruler£§!Eusociality"
 	civic_tec_hive_brood_eusocial_noicon:0 "Eusociality"
-	civic_tec_hive_brood_eusocial_desc:0 "['concept_tec_brood_capital_civic']\n\nWhile united under the same consciousness, this species has evolved and thrived thanks to the mutual collaboration of every member of the hive, with a strong cooperative brood care, overlapping generations within a colony of adults, and a division of labor into reproductive and non-reproductive groups, creating specialized castes that propers a unitary development and prosperous future for every member."
+	civic_tec_hive_brood_eusocial_desc:0 "['concept_tec_brood_capital_civic', $concept_tec_brood_capital_civic$ - Growth]\n\nWhile united under the same consciousness, this species has evolved and thrived thanks to the mutual collaboration of every member of the hive, with a strong cooperative brood care, overlapping generations within a colony of adults, and a division of labor into reproductive and non-reproductive groups, creating specialized castes that propers a unitary development and prosperous future for every member."
 	civic_tec_hive_brood_eusocial_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_brood_queen_drone£ Brood Progenitors§!\n- £building£ Capital Buildings replace §Yall§! their §Y$tec_loc_unity$ Drone§! jobs with a single ['concept_tec_ruler_job_tec_brood_queen_drone_icon'] and various ['concept_tec_ruler_job_tec_brood_lord_drone_plural_icon'] increased by §Y$tec_loc_capital_tier$§! and §Y$tec_loc_planet_ascension_plural$§!.\n\n$tec_loc_c_unlocks_feature$ §H£mod_pop_growth_speed£ Mutual Structuring§!\n- Each §Y£job_tec_brood_lord_drone£ $job_tec_brood_lord_drone$§! increase the production and upkeep of the planet §Y£job_tec_brood_queen_drone£ $job_tec_brood_queen_drone$§!\nCreating an external source of £pop£ Pop Assembly will make £job_tec_brood_queen_drone£ $job_tec_brood_queen_drone_plural$ produce a small amount of £mod_pop_growth_speed£ Pop growth instead.\n\n$tec_loc_c_restriction$ §RForbids§! £building£ Spawning Pools.\n"
 
 	civic_tec_hive_brood_splicer_queens:0 "§G£tec_civic_ruler£§!Splicer Matriarchs"
 	civic_tec_hive_brood_splicer_queens_noicon:0 "Splicer Matriarchs"
-	civic_tec_hive_brood_splicer_queens_desc:0 "['concept_tec_brood_capital_civic']\n\nA strict caste of genetically enhanced matriarchs control and change the different broods of the hivemind, applying a broad variant of sequential changes to the new and exiting drones while keeping a strict command over all the brood."
+	civic_tec_hive_brood_splicer_queens_desc:0 "['concept_tec_brood_capital_civic', $concept_tec_brood_capital_civic$ - Growth]\n\nA strict caste of genetically enhanced matriarchs control and change the different broods of the hivemind, applying a broad variant of sequential changes to the new and exiting drones while keeping a strict command over all the brood."
 	civic_tec_hive_brood_splicer_queens_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_brood_queen_drone£ Splicer Queens§!\n- £building£ Capital Buildings replace §Yone§! of their §Y$tec_loc_unity$ Drone§! jobs with a single ['concept_tec_ruler_job_tec_brood_splicer_queen_drone_icon']. On the capital, the job provided is a single ['concept_tec_ruler_job_tec_brood_splicer_empress_drone_icon'], which amplifies the rest of Queens.\n\n$tec_loc_c_unlocks_feature$ §H£mod_pop_growth_speed£ Injected Change§!\n- Each §Y£job_tec_brood_splicer_queen_drone£ $job_tec_brood_splicer_queen_drone$§! replace sources of $tec_loc_assembly$ and will change drone bonuses based on the $tec_loc_planet_designation$.\nCreating an external source of £pop£ Pop Assembly will make £job_tec_brood_splicer_queen_drone£ $job_tec_brood_splicer_queen_drone_plural$ produce a small amount of £mod_pop_growth_speed£ Pop growth instead.\n\n$tec_loc_c_restriction$ §RForbids§! £building£ Spawning Pools.\n"
 	# capital provide a Splicer Empress, rest provide Splicer Matriarchs
 	# focus on genetics more than eusociality
@@ -2305,38 +2305,38 @@
 	# Output
 	civic_tec_hive_brood_overminds:0 "§G£tec_civic_ruler£§!Subservient Overminds"
 	civic_tec_hive_brood_overminds_noicon:0 "Subservient Overminds"
-	civic_tec_hive_brood_overminds_desc:0 "['concept_tec_brood_capital_civic']\n\nThis collective derivates a relatively high amount of control power to specificially control drones, which have the task to control all the lesser ones at a planetary scale. Generally this produces a remarked separation between castes of drones, conforming a strong but diversified collective."
+	civic_tec_hive_brood_overminds_desc:0 "['concept_tec_brood_capital_civic', $concept_tec_brood_capital_civic$ - Control]\n\nThis collective derivates a relatively high amount of control power to specificially control drones, which have the task to control all the lesser ones at a planetary scale. Generally this produces a remarked separation between castes of drones, conforming a strong but diversified collective."
 	civic_tec_hive_brood_overminds_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_overmind_drone£ Overminds§!\n- £building£ Capital Buildings provide a single ['concept_tec_ruler_job_tec_overmind_drone_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£unity£ Controlling Grasp§!\n- £job_patrol_drone£ §YAnti-Crime§! drones are twice as effective at reducing £crime£ §YDeviancy§!.\n\n$tec_loc_c_unlocks_feature$ §H£influence£ Hegemonic Influence§!\n- Can use ['concept_hegemony_federation'] Federation Type."
 	# Capitals add overminds, overmind changes its type based on colony type and boost jobs
 
 	civic_tec_hive_brood_overminds_cybernetic:0 "§G£tec_civic_ruler£§!Subservient Adjutants"
 	civic_tec_hive_brood_overminds_cybernetic_noicon:0 "Subservient Adjutants"
-	civic_tec_hive_brood_overminds_cybernetic_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_overminds_cybernetic_desc:0 "['concept_tec_brood_capital_civic', $concept_tec_brood_capital_civic$ - Control]\n\nTO DO"
 	civic_tec_hive_brood_overminds_cybernetic_tooltip:0 "TO DO"
 	# Capitals add adjutants, adjutants changes its type based on colony type boosting the job
 
 	civic_tec_hive_brood_cerebrates:0 "§G£tec_civic_ruler£§!Controlling Cerebrates"
 	civic_tec_hive_brood_cerebrates_noicon:0 "Controlling Cerebrates"
-	civic_tec_hive_brood_cerebrates_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_cerebrates_desc:0 "['concept_tec_brood_capital_civic', $concept_tec_brood_capital_civic$ - Control]\n\nTO DO"
 	civic_tec_hive_brood_cerebrates_tooltip:0 "TO DO"
 	# 1 High research/performance job, provided by a building - building type changes the type of cerebrate
 
 	civic_tec_hive_brood_cerebrates_cybernetic:0 "§G£tec_civic_ruler£§!Supervision Clusters"
 	civic_tec_hive_brood_cerebrates_cybernetic_noicon:0 "Supervision Clusters"
-	civic_tec_hive_brood_cerebrates_cybernetic_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_cerebrates_cybernetic_desc:0 "['concept_tec_brood_capital_civic', $concept_tec_brood_capital_civic$ - Control]]\n\nTO DO"
 	civic_tec_hive_brood_cerebrates_cybernetic_tooltip:0 "TO DO"
 	# 1 High research/performance job, provided by a building - building type changes the type of cluster
 
 	# Change
 	civic_tec_hive_brood_proteans:0 "§G£tec_civic_ruler£§!Proteanic Collective"
 	civic_tec_hive_brood_proteans_noicon:0 "Proteanic Collective"
-	civic_tec_hive_brood_proteans_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_proteans_desc:0 "['concept_tec_brood_capital_civic', $concept_tec_brood_capital_civic$ - Evolution]\n\nTO DO"
 	civic_tec_hive_brood_proteans_tooltip:0 "TO DO"
 	# Adaptation to adversity - job changes based on the planet/designation/etc
 
 	civic_tec_hive_brood_twisters:0 "§G£tec_civic_ruler£§!Mutagenic Evolvers"
 	civic_tec_hive_brood_twisters_noicon:0 "Mutagenic Evolvers"
-	civic_tec_hive_brood_twisters_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_twisters_desc:0 "['concept_tec_brood_capital_civic', $concept_tec_brood_capital_civic$ - Evolution]\n\nTO DO"
 	civic_tec_hive_brood_twisters_tooltip:0 "TODO CIVIC unlock mutation dens which provide Permutator drones, permutator drones give 1*capital level pops a bonus to a random pop that can stack +25-50-100% base output (mutenhanced-mutevolved-mutapex drone); bonus can be lethal to the pops based on species traits"
 	# Allow Mutation Dens providing Mutalizers, Abathur-like playstyle adding bonuses/debuffs to pops as modifier (permanently, each x years evolves a pop)
 
