identity trait fix

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -5,7 +5,7 @@
 	tec_identity_trait:0 "['concept_tec_identity_trait']"
 
 	concept_tec_identity_trait:0 "Identity Trait"
-	concept_tec_identity_trait_icon:0 "$concept_tec_identity_trait$"
+	concept_tec_identity_trait_icon:0 "$todo_art$"
 	concept_tec_identity_trait_help_icon:0 "£trigger_tec_question£"
 	concept_tec_identity_trait_desc:0 "Identity traits are special traits tied to a §YSpecies§! Evolution or Development, and as such, represent a big change on their way of existing.\n\n§YIdentity traits change their costs based on the game pace, being cheaper if picked at empire creation and more expensive if picked for societies not owning them at the start.§!"
 
@@ -726,7 +726,7 @@
 	mod_tec_gene_improvement_mult:0 "['concept_tec_gene_improvement'] effect"
 
 	concept_tec_gene_improvement:0 "Gene-Therapy"
-	concept_tec_gene_improvement_icon:0 "$concept_tec_gene_improvement$"
+	concept_tec_gene_improvement_icon:0 "$todo_art$"
 	concept_tec_gene_improvement_help_icon:0 "£trigger_tec_question£"
 	concept_tec_gene_improvement_desc:0 "$todo_ascension$"
 
@@ -1428,6 +1428,11 @@
 	trait_tec_cyborg_cortex_relic_desc:0 "§LOn top of any intellect enhancement, this species can enjoy the transfer of a complete consciousness or knowledge library from one body to another, in the way of small databanks integrated within their brains. This allows to also repair a individual personality completely in case of bodily fatal failure, in the body of a clone, synthetic platform or a relatively compatible host.§!"
 	trait_tec_cyborg_cortex_relic_effect:0 "§ECortex Modifiers:§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t2_energy_upk_high$§!\n\n§EFeature:§! §HIdentity Preservation§!\nDeceased leaders have a §Y$@trait_tec_cyborg_cortex_relic_reanimation_rate$%§! chance per level to be ['concept_tec_cybernetic_reincarnation_icon', §YRestored§!].\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency of §YALL§! Cybernetic modifiers increased by §G+$@trait_tec_cyborg_cortex_relic_boost_rate_tt$%§!"
 	# ^ TODO ASCENSION as the prev version, leader boost and chance leader reincarnates
+
+	concept_tec_cybernetic_reincarnation:0 "Identity Trait"
+	concept_tec_cybernetic_reincarnation_icon:0 "$todo_art$"
+	concept_tec_cybernetic_reincarnation_help_icon:0 "£trigger_tec_question£"
+	concept_tec_cybernetic_reincarnation_desc:0 "Identity traits are special traits tied to a §YSpecies§! Evolution or Development, and as such, represent a big change on their way of existing.\n\n§YIdentity traits change their costs based on the game pace, being cheaper if picked at empire creation and more expensive if picked for societies not owning them at the start.§!"
 
  # --------------- Internal Implants
 	# Tier 1
