--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -47,6 +47,9 @@
 	todo_machine_civics:0 ""
 	todo_origin_civics:0 ""
 
+	todo_art:0 ""
+
+	# Common loc
 	tec_loc_energy:0 "$tec_loc_energy_icon$ Energy"
 	tec_loc_energy_icon:0 "£energy£"
 	tec_loc_minerals:0 "$tec_loc_minerals_icon$ Minerals"
