fix: more hoarder cui

--- a/localisation/english/zz_evolved_hoarders_l_english.yml
+++ b/localisation/english/zz_evolved_hoarders_l_english.yml
@@ -62,3 +62,5 @@
  tec_cui_hoarders_vault_n1000: "-1000"
  tec_cui_hoarders_vault_n10000: "-10000"
  tec_cui_hoarders_vault_withdraw: "W"
+ tec_cui_hoarders_vault_withdraw_all: "Withdraw All"
+ tec_cui_hoarders_vault_deposit_all: "Deposit All"
